--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,162 +75,6 @@ header {
 
 }
 
-/* ------ */
-/* topnav */
-/* ------ */
-
-/* Add a black background color to the top navigation */
-.topnav {
-    background-color: rgb(34, 34, 34);
-    overflow: hidden;
-    z-index: 99;
-}
-
-/* Style the links inside the navigation bar */
-.topnav a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-}
-
-.topnav a img {
-    height: 20px;
-    filter: invert();
-}
-
-/* Add an active class to highlight the current page */
-#startPage {
-    background-color: #7b1e31;
-    color: white;
-}
-
-/* Hide the link that should open and close the topnav on small screens */
-.topnav .icon {
-    display: none;
-}
-
-/* Dropdown container - needed to position the dropdown content */
-.dropdown {
-    float: left;
-    overflow: hidden;
-}
-
-/* Style the dropdown button to fit inside the topnav */
-.dropdown .dropbtn {
-    font-size: 17px;
-    border: none;
-    outline: none;
-    color: white;
-    padding: 14px 16px;
-    background-color: inherit;
-    font-family: inherit;
-    margin: 0;
-}
-
-/* Style the dropdown content (hidden by default) */
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-}
-
-/* Style the links inside the dropdown */
-.dropdown-content a {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
-
-.dropdown-content a img {
-    filter: none;
-}
-
-/* Add a dark background on topnav links and the dropdown button on hover */
-.topnav a:hover,
-.dropdown:hover .dropbtn {
-    background-color: #555;
-    color: white;
-}
-
-/* Add a grey background to dropdown links on hover */
-.dropdown-content a:hover {
-    background-color: #ddd;
-    color: black;
-}
-
-/* Show the dropdown menu when the user moves the mouse over the dropdown button */
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
-@media screen and (max-width: 600px) {
-
-    .topnav div:not(:first-child),
-    .topnav a:not(:first-child),
-    .dropdown .dropbtn {
-        display: none;
-    }
-
-    .topnav a.icon {
-        float: right;
-        display: block;
-    }
-}
-
-/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
-@media screen and (max-width: 600px) {
-    .topnav.responsive {
-        position: relative;
-    }
-
-    .topnav.responsive a.icon {
-        position: absolute;
-        right: 0;
-        top: 0;
-    }
-
-    .topnav.responsive a {
-        float: none;
-        display: block;
-        text-align: left;
-    }
-
-    .topnav.responsive div:not(.dropdown-content) {
-        float: none;
-        display: block;
-        text-align: left;
-    }
-
-    .topnav.responsive .dropdown {
-        float: none;
-    }
-
-    .topnav.responsive .dropdown-content {
-        position: relative;
-    }
-
-    .topnav.responsive .dropdown .dropbtn {
-        display: block;
-        width: 100%;
-        text-align: left;
-    }
-}
-
-
-
-
-
 /* ----------- */
 /* début story */
 /* ----------- */
@@ -585,7 +429,7 @@ footer {
 .wrapper {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: auto auto auto auto auto auto;
+    grid-template-rows: auto 50px auto auto auto auto;
 
     grid-template-areas: "header header"
         "topnav topnav"
@@ -599,8 +443,27 @@ header {
     grid-area: header;
 }
 
-.topnav {
+/* ============ */
+/* ===NavBar=== */
+/* ============ */
+
+nav {
     grid-area: topnav;
+    background-color: rgb(34, 34, 34);
+}
+
+nav a img {
+    height: 20px;
+    filter: invert(1);
+}
+
+.dropdown-menu a img{
+    filter: none;
+}
+
+.dropdown > button {
+    background-color: rgb(34, 34, 34);
+    border: none;
 }
 
 #secStory {
