--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,205 +131,13 @@ h2 {
 /* ---------- */
 /* CARROUSSEL */
 /* ---------- */
-
-
-
-.caroussel_diapo input {
-    position: absolute;
-    left: -9999px
-}
-
-.caroussel_diapo {
-    position: relative;
-    text-align: center;
-    margin: 20px auto
-}
-
-
-.contenu_carou {
-    max-width: 500px;
-    min-height: 430px;
-    margin: 2rem auto;
-    perspective: 1000px
-}
-
-
-.caroussel {
-    position: relative;
-    transform-style: preserve-3d;
-    max-width: 500px;
-    min-height: 430px;
-    transition: 1s transform
-}
-
-.caroussel div {
-    position: absolute;
-    top: 0;
-    left: 0;
-    outline: 1px solid transparent;
-    backface-visibility: hidden;
-    will-change: transform;
-    transition: 1s transform;
-    background-color: rgba(123, 30, 49);
-    color: #f2f2f2;
-}
-
-.caroussel div h1 {
-    color: #f2f2f2;
-}
-
-.caroussel div img {
-    max-width: 100%;
-    position: relative;
-    top: 0;
-    left: 0;
-}
-
-.caroussel div p {
-    margin: 0px;
-    height: 80px;
-    background-color: rgb(27, 27, 27);
-}
-
-
-.caroussel div:nth-child(1) {
-
-    transform: translate3d(0, 0, 540px) scale(.8)
-}
-
-.caroussel div:nth-child(2) {
-
-    transform: rotateY(45deg) translateZ(540px) scale(.8)
-}
-
-.caroussel div:nth-child(3) {
-
-    transform: rotateY(90deg) translateZ(540px) scale(.8)
-}
-
-.caroussel div:nth-child(4) {
-
-    transform: rotateY(135deg) translateZ(540px) scale(.8)
-}
-
-.caroussel div:nth-child(5) {
-
-    transform: rotateY(180deg) translateZ(540px) scale(.8)
-}
-
-.caroussel div:nth-child(6) {
-
-    transform: rotateY(225deg) translateZ(540px) scale(.8)
-}
-
-.caroussel div:nth-child(7) {
-
-    transform: rotateY(270deg) translateZ(540px) scale(.8)
-}
-
-.caroussel div:nth-child(8) {
-
-    transform: rotateY(315deg) translateZ(540px) scale(.8)
-}
-
-.caroussel_diapo input[type=radio]+label {
-    cursor: pointer;
-    background-color: rgba(0, 0, 0, 0.733);
-    display: inline-block;
-    width: 20px;
-    border-radius: 50%;
-    height: 20px
-}
-
-.caroussel_diapo input[type=radio]:checked+label {
-
-    background-color: #7B1E31
-}
-
-
-
-
-/*gauche*/
-.caroussel_diapo #carou_un:checked~.contenu_carou .caroussel {
-
-    transform: translateZ(-540px)
-}
-
-.caroussel_diapo #carou_deux:checked~.contenu_carou .caroussel {
-
-    transform: translateZ(-540px) rotateY(-45deg)
-}
-
-.caroussel_diapo #carou_trois:checked~.contenu_carou .caroussel {
-
-    transform: translateZ(-540px) rotateY(-90deg)
-}
-
-.caroussel_diapo #carou_quatre:checked~.contenu_carou .caroussel {
-
-    transform: translateZ(-540px) rotateY(-135deg)
-}
-
-.caroussel_diapo #carou_cinq:checked~.contenu_carou .caroussel {
-
-    transform: translateZ(-540px) rotateY(-180deg)
-}
-
-.caroussel_diapo #carou_six:checked~.contenu_carou .caroussel {
-
-    transform: translateZ(-540px) rotateY(-225deg)
-}
-
-.caroussel_diapo #carou_sept:checked~.contenu_carou .caroussel {
-
-    transform: translateZ(-540px) rotateY(-270deg)
-}
-
-.caroussel_diapo #carou_huit:checked~.contenu_carou .caroussel {
-
-    transform: translateZ(-540px) rotateY(-315deg)
-}
-
-
-/*droite*/
-.caroussel_diapo #carou_un:checked~.contenu_carou .caroussel div:nth-child(1) {
-
-    transform: translateZ(540px) scale(1)
-}
-
-.caroussel_diapo #carou_deux:checked~.contenu_carou .caroussel div:nth-child(2) {
-
-    transform: rotateY(45deg) translateZ(540px) scale(1)
-}
-
-.caroussel_diapo #carou_trois:checked~.contenu_carou .caroussel div:nth-child(3) {
-
-    transform: rotateY(90deg) translateZ(540px) scale(1)
-}
-
-.caroussel_diapo #carou_quatre:checked~.contenu_carou .caroussel div:nth-child(4) {
-
-    transform: rotateY(135deg) translateZ(540px) scale(1)
-}
-
-.caroussel_diapo #carou_cinq:checked~.contenu_carou .caroussel div:nth-child(5) {
-
-    transform: rotateY(180deg) translateZ(540px) scale(1)
-}
-
-.caroussel_diapo #carou_six:checked~.contenu_carou .caroussel div:nth-child(6) {
-
-    transform: rotateY(225deg) translateZ(540px) scale(1)
-}
-
-.caroussel_diapo #carou_sept:checked~.contenu_carou .caroussel div:nth-child(7) {
-
-    transform: rotateY(270deg) translateZ(540px) scale(1)
-}
-
-.caroussel_diapo #carou_huit:checked~.contenu_carou .caroussel div:nth-child(8) {
-
-    transform: rotateY(315deg) translateZ(540px) scale(1)
+.borderTitle {
+    display: block;
+    margin: auto;
+    border-color: #7B1E31;
+    border-style: solid;
+    border-radius: 8px;
+    width: 200px;
 }
 
 /* ---------- */
@@ -428,15 +236,15 @@ footer {
 
 .wrapper {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 100px 1fr 100px ;
     grid-template-rows: auto auto auto auto auto auto;
 
-    grid-template-areas: "header header"
-        "topnav topnav"
-        "secStory secStory"
-        "secService secService"
-        "secContact secContact"
-        "footer footer";
+    grid-template-areas: "header header header"
+        "topnav topnav topnav"
+        "secStory secStory secStory"
+        ". secService ."
+        "secContact secContact secContact"
+        "footer footer footer";
 }
 
 header {
@@ -521,6 +329,9 @@ footer {
         grid-area: secService;
     }
     
+    .borderTitle {
+        margin-bottom: 30px;
+    }
     #secContact {
         grid-area: secContact;
     }
