--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,8 @@ header {
     background-size: cover;
 }
 
+/* tuile de separation /titre entre les sections */
+
 .borderTitle {
     display: block;
     margin: auto;
@@ -74,13 +76,11 @@ header {
     width: 200px;
     grid-column: 1 / 3;
     grid-row: 1;
-
 }
 
 /* ----------- */
 /* début story */
 /* ----------- */
-
 #secStory {
     position: relative;
     display: flex;
@@ -119,25 +119,11 @@ header {
     width: 30%;
 }
 
-@media screen and (max-width: 600px) {
-    .txtStory {
-        width: 75%;
-    }
-}
-
 h2 {
     font-size: 0.8rem;
     color: white;
 }
 
-/* ---------- */
-/* CARROUSSEL */
-/* ---------- */
-
-
-/* ---------- */
-/* Formulaire */
-/* ---------- */
 
 .card {
     margin: 20px auto;
@@ -187,9 +173,9 @@ textarea {
     height: 10rem;
 }
 
-/* -------------- 
-footer---------
---------------*/
+/* ============ */
+/* ===footer=== */
+/* ============ */
 
 .flexRow {
     display: flex;
@@ -233,9 +219,9 @@ footer {
     visibility: hidden;
 }
 
-/* ================ */
-/* === Css grid === */
-/* ================ */
+/*  */
+/*  */
+/*  */
 
 .wrapper {
     display: grid;
@@ -270,7 +256,7 @@ nav {
 
 nav a img {
     height: 20px;
-    filter: invert();
+    filter: invert(1);
 }
 
 .dropdown-menu a img {
@@ -319,10 +305,6 @@ footer {
         height: 50vh;
     }
 
-    /* ============ */
-    /* ===NavBar=== */
-    /* ============ */
-
     nav {
         grid-area: topnav;
         background-color: rgb(34, 34, 34);
@@ -330,7 +312,7 @@ footer {
 
     nav a img {
         height: 20px;
-        filter: invert();
+        filter: invert(1);
     }
 
     .borderTitle {
@@ -343,8 +325,6 @@ footer {
 
     #secStory {
         grid-area: secStory;
-        /* margin: 0px;
-        padding: 0px; */
     }
 
     #secService {
@@ -389,10 +369,6 @@ footer {
         grid-area: header;
         height: 100vh;
     }
-
-    /* ============ */
-    /* ===NavBar=== */
-    /* ============ */
 
     nav {
         grid-area: topnav;
