--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,7 +120,7 @@ li{
     padding: 5px;
     text-align: center;
     font-size: 0.8rem;
-    width: 30%;
+    width: 60%;
 }
 
 /* ---------- */
@@ -214,7 +214,7 @@ footer {
 .wrapper {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: auto 41vh auto auto auto auto;
+    grid-template-rows: auto 41vh 500px auto auto auto;
 
     grid-template-areas: "topnav topnav"
         "header header"
@@ -303,6 +303,10 @@ footer {
         filter: invert(1);
     }
 
+    .txtStory {
+        width: 40%;
+    }
+
     .borderTitle {
         margin-top: 20px;
     }
@@ -374,6 +378,10 @@ footer {
 
     #secStory {
         grid-area: secStory;
+    }
+
+    .txtStory {
+        width: 30%;
     }
 
     #secService {
